src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_1_environment.snap
---
source: src/tests/fn_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
