src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_2_evaluation.snap
---
source: src/tests/fn_expression/mod.rs
expression: evaluation
---
Function {
    parameters: [
        "x",
        "y",
    ],
    block: Block {
        nodes: [
            Expression {
                expression: Infix {
                    left_hand: Identifier {
                        identifier: "x",
                    },
                    operator: Plus,
                    right_hand: Identifier {
                        identifier: "y",
                    },
                },
            },
        ],
    },
    ..
}
