src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_2_lexical_analysis.snap
---
source: src/tests/fn_expression/mod.rs
assertion_line: 17
expression: tokens
---
[
    PositionedToken {
        token: Function,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 15,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 19,
        },
    },
]
