src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_3_evaluation.snap
---
source: src/tests/fn_expression/mod.rs
expression: evaluation
---
Function {
    parameters: [],
    block: Block {
        nodes: [
            Expression {
                expression: Integer {
                    literal: 3,
                },
            },
        ],
    },
    ..
}
